--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
   </head>
 
   <body>
+    <div id="root">
     <div class="toptitle">
 
         <center>
@@ -58,84 +59,19 @@
         <div class="row">
             <div class="col-md-12">
                 <BR>
-                    <a href="https://bergstromkelsey.github.io/thirdupdateportfolio/"><button type="button" id="about" class="btn btn-outline-dark">About</button></a>
+                  <a href="https://bergstromkelsey.github.io/thirdupdateportfolio/"><button type="button" id="about" class="btn btn-outline-dark">About</button></a>
                     <a href="https://bergstromkelsey.github.io/thirdupdateportfolio/contact"><button type="button" id="contact" class="btn btn-outline-dark">Contact</button></a>
-                    <a href="https://bergstromkelsey.github.io/thirdupdateportfolio/portfolio"><button type="button" id="portfolio" class="btn btn-outline-dark">Portfolio</button></a>
-                <!-- <button id="about" class="btn btn-outline-dark">About</button>
-                <button id="portfolio" class="btn btn-outline-dark">Portfolio</button>
-                <button id="contact" class="btn btn-outline-dark">Contact</button> -->
-            </div>
+                    <a href="https://bergstromkelsey.github.io/thirdupdateportfolio/portfolio"><button type="button" id="portfolio" class="btn btn-outline-dark">Portfolio</button></a> 
+               
+             </div>
         </div>
     </div>
 
-    <div id="tableThree">
-        <div class="col-md-6">
-            <h1>Personal <BR><k>Projects</k> 
-            </h1>
-        </div>
-        <center>
-            <BR>
-            <h3>Horse Manager</h3>
-            <a href="https://whispering-inlet-04022.herokuapp.com/">-Deployed Link </a>
-            <a href="https://github.com/NickStull/barn-manager-app">-GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/ht1.png" width=500px alt="Photo of Horse Tracker"><BR><BR>
-            <img class="imgTwo-responsive" src="assets/ht4.png" width=500px alt="Photo of Horse Tracker"><BR><BR>
-            <BR>
-            <h3>Note Taker</h3>
-            <a href="https://rocky-beach-59728.herokuapp.com/">-Deployed Link </a>
-            <a href="https://github.com/BergstromKelsey/NewRepoForNotesAssignment"> -GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/4.png" width=500px alt="Photo of Note Taker"><BR><BR>
-            <img class="imgTwo-responsive" src="assets/1.png" width=500px alt="Photo of Note Taker"><BR><BR>
-            <BR>
-            <h3>Burger Saver</h3>
-            <a href="https://burgerappwithhndlebar.herokuapp.com/">-Deployed Link </a>
-            <a href="https://github.com/BergstromKelsey/Burger">-GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/burger1.png" width=500px alt="Photo of Burger Saver"><BR><BR>
-            <img class="imgTwo-responsive" src="assets/burger2.png" width=500px alt="Photo of Burger Saver"><BR><BR>
-            <BR>
-            <h3>First Portfolio</h3>
-            <a href="https://bergstromkelsey.github.io/responsiveness/">-Deployed Link </a>
-            <a href="https://github.com/BergstromKelsey/responsiveness">-GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/old1.png" width=500px alt="Photo of Workday Scheduler"><BR><BR>
-            <img class="imgTwo-responsive" src="assets/old2.png" width=500px alt="Photo of Workday Scheduler"><BR><BR>
-            <BR>
+ 
 
-            <h3>Work Day Scheduler</h3>
-            <a href="https://bergstromkelsey.github.io/WordDayScheduleAssignment/">-Deployed Link </a>
-            <a href="https://github.com/BergstromKelsey/WordDayScheduleAssignment">-GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/Screen Shot 2021-01-20 at 6.32.20 PM.png" width=500px
-                alt="Photo of Workday Scheduler"><BR><BR>
 
-            <img class="imgTwo-responsive" src="assets/Screen Shot 2021-01-20 at 6.32.08 PM.png" width=500px
-                alt="Photo of Workday Scheduler"><BR><BR>
-            <BR>
-            <h3>State Capitals Quiz</h3>
-            <a href="https://bergstromkelsey.github.io/quizassignment/">-Deployed Link </a>
-            <a href="https://github.com/BergstromKelsey/quizassignment">-GitHub Repository</a>
-            <p class="divided">
-                <span class="divider"></span>
-            </p><BR>
-            <img class="imgTwo-responsive" src="assets/Screen Shot 2021-01-20 at 6.30.43 PM.png" width=500px
-                alt="Photo of Workday Scheduler"><BR><BR>
-            <img class="imgTwo-responsive" src="assets/Screen Shot 2021-01-20 at 6.31.11 PM.png" width=500px
-                alt="Photo of Workday Scheduler">
-        </center>
-    </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -143,6 +79,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
-    <script type='text/javascript' src='script.js'> </script>
+        <div id="root"></div>
+   </div>
   </body>
 </html>
